# NoWhite_Clion

./: CMakeLists.txt  NoWhite.cpp  NoWhite.h  main.cpp
